--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <artifactId>spring-security-config</artifactId>
             <version>4.0.3.RELEASE</version>
         </dependency>
+        
+        <dependency>
+	        <groupId>org.springframework.security</groupId>
+	        <artifactId>spring-security-taglibs</artifactId>
+	        <version>4.0.3.RELEASE</version>
+	    </dependency>
         <!-- Spring Security -->
         
         <!-- 이메일 인증 -->
