--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	 <session-config>
+        <session-timeout>180</session-timeout>
+    </session-config>
 
 	<!-- Processes application requests -->
 	<servlet>
