민영 채팅기능 추가 pom.xml : 웹소켓 dependency 추가 web.xml. root-context.xml : 웹소켓 부분 추가
main.jsp에만 슬라이드 채팅메뉴 추가해놓음

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,14 @@
 		</repository>
 	</repositories>
 	
-	<dependencies>	
+	<dependencies>
+		<!-- spring websocket -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>4.2.2.RELEASE</version>
+		</dependency>
+			
 		<!-- 오라클 JDBC 드라이버 -->
 		<dependency>
 		    <groupId>oracle</groupId>
