--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,13 @@
         	<artifactId>mail</artifactId>
         	<version>1.4.7</version>
         </dependency>
+        
+        <!-- SMS전송 -->
+		<dependency>
+    		<groupId>net.nurigo</groupId>
+    		<artifactId>javaSDK</artifactId>
+    		<version>2.2</version>
+		</dependency>
 	
 		<!-- Spring -->
 		<dependency>
