혜인 - 메이븐 오류 추가

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 	</repositories>
 	
 	<dependencies>
+		<!-- 메이븐 오류 혜인추가 -->
+		<dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-resources-plugin</artifactId>
+		    <version>2.4.3</version>
+		</dependency>
 		<!-- spring websocket -->
 		<dependency>
 			<groupId>org.springframework</groupId>
