--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,5 +55,37 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- error page -->
+	<error-page>
+		<error-code>400</error-code>
+		<location>/WEB-INF/views/error/code400.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/error/code404.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/error/code500.jsp</location>
+	</error-page>
+	
+	<error-page>
+    	<exception-type>java.lang.NullPointerException</exception-type>
+    	<location>/WEB-INF/error/erPage.jsp</location>
+	</error-page>
+
+	<error-page>
+     	<exception-type>java.lang.Throwable</exception-type>
+    	<location>/WEB-INF/error/erPage.jsp</location>
+	</error-page>
+
+	<error-page>
+    	<exception-type>java.lang.Exception</exception-type>
+    	<location>/WEB-INF/error/erPage.jsp</location>
+	</error-page>
+
 
 </web-app>
